--- a/rapports/report/report_docker_marigliano.tex
+++ b/rapports/report/report_docker_marigliano.tex
@@ -1170,7 +1170,7 @@ On le voit, \textit{high-priority} occupe 80\% de l'utilisation CPU ($320 = 400 
 
 
 \subsubsection{Limitation du nombre de cores}
-TODO
+Il est possible de définir quels cores un container peut utiliser grâce au flag \code{--cpuset-cpus}.
 
 \textbf{Cas d'utilisation - \textit{low-priority} seul sur le core 0} :
 
